[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
postgres = "0.19"
serde_derive = "1.0"
mongodb = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.3"
bson = "2.6.1"
futures-util = "0.3"
derive_more = "^0.99"
rust-argon2 = "2.0"
jsonwebtoken = "9.0.0"
lazy_static = "1.4.0"
notify = "6.1.1"
cargo-watch = "8.5.2"
